--- a/templates/login.html
+++ b/templates/login.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Login</title>
+    <title>Login - Cholera Diagnosis</title>
 </head>
 <body>
-    <h2>Login</h2>
-    {% if error %}
-        <p style="color:red;">{{ error }}</p>
-    {% endif %}
-    <form method="POST">
+    <h2>Login to Continue</h2>
+    <form action="/login" method="POST">
         <label>Username:</label>
         <input type="text" name="username" required><br><br>
         <label>Password:</label>
@@ -17,4 +14,3 @@
     </form>
 </body>
 </html>
-
